# arcdps-clears

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  run-mock-debug.sh
.github/workflows/: build-and-test.yml  release.yml  rust.yml
src/: api.rs  clears.rs  friends.rs  guide.rs  input.rs  lib.rs  settings.rs  translations.rs  ui.rs  updates.rs  urls.rs  workers.rs
src/settings/: defaults.rs  migrations.rs  mod.rs
src/ui/: about.rs  apikeys.rs  clears.rs  friends.rs  mod.rs  settings.rs  style.rs  updates.rs  utils.rs
translations/: arcdps_lang_clears.json
