[package]
name = "clears"
version = "0.2.0"
authors = ["Jiří Sejkora <sejsel@sejsel.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
itertools = "0.10.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
ureq = "2.1.0"
version-compare = "0.0.11"
open = "1.7.0"

[dependencies.arcdps]
path = "../../arcdps_bindings/core"