[package]
name = "clears"
version = "1.0.0-rc2"
authors = ["Jiří Sejkora <sejsel@sejsel.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
itertools = "0.10.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
ureq = "2.1.0"
version-compare = "0.0.11"
open = "1.7.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
sha2 = "0.9.8"

[dependencies.log]
version = "0.4.14"
features = ["max_level_info", "release_max_level_info"]

[dependencies.arcdps]
git = "https://github.com/gw2scratch/arcdps_bindings.git"